--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,56 @@
 Files
 Tareas
 Lab/VM
+
+*.xreport
+*.stx
+*.xst
+*.lso
+*.syr
+*_xst.xrpt
+*.prj
+webtalk_pn.xml
+*.ngc
+*.ngr
+*.cmd_log
+xst.xmsgs
+*.ngd
+*.bld
+*_ngdbuild.xrpt
+_ngo
+xlnx_auto_0_xdb
+ngdbuild.xmsgs
+*_map.map
+*_map.mrp
+*_map.xrpt
+*_map.ncd
+*.pcf
+*_map.ngm
+*_usage.xml
+*_summary.xml
+map.xmsgs
+*.ncd
+*.pad
+*.par
+*.unroutes
+*.xpi
+*_par.xrpt
+*_pad.txt
+*_pad.csv
+*.ptwx
+par.xmsgs
+*.twr
+*.twx
+trce.xmsgs
+*.drc
+*.bit
+*.bgn
+*.ut
+webtalk.log
+*.html
+bitgen.xmsgs
+*_guide.ncd
+work.vdbl
+work.vdbx
+*.gise
+pn_parser.xmsgs
