Update not done.

--- a/Lab/Projects/P09_Leds/Leds/Leds.ucf
+++ b/Lab/Projects/P09_Leds/Leds/Leds.ucf
@@ -12,3 +12,7 @@ NET "BUTTONS[1]" LOC = D9;
 NET "BUTTONS[2]" LOC = A8;
 NET "BUTTONS[3]" LOC = C9;
 NET "BUTTONS[4]" LOC = B8;
+NET "BUTTONS[5]" LOC = B8;
+NET "BUTTONS[6]" LOC = B8;
+NET "BUTTONS[7]" LOC = B8;
+NET "CLK" LOC = B8;
