--- a/Lab/Projects/P09_Leds/Leds/Leds.ucf
+++ b/Lab/Projects/P09_Leds/Leds/Leds.ucf
@@ -7,12 +7,13 @@ NET "LED[4]" LOC = M11;
 NET "LED[5]" LOC = N11;
 NET "LED[6]" LOC = R11;
 NET "LED[7]" LOC = T11;
-NET "BUTTONS[0]" LOC = C4;
-NET "BUTTONS[1]" LOC = D9;
-NET "BUTTONS[2]" LOC = A8;
-NET "BUTTONS[3]" LOC = C9;
-NET "BUTTONS[4]" LOC = B8;
-NET "BUTTONS[5]" LOC = B8;
-NET "BUTTONS[6]" LOC = B8;
-NET "BUTTONS[7]" LOC = B8;
-NET "CLK" LOC = B8;
+NET "BUTTONS[0]" LOC = T10;
+NET "BUTTONS[1]" LOC = T9;
+NET "BUTTONS[2]" LOC = V9;
+NET "BUTTONS[3]" LOC = M8;
+NET "BUTTONS[4]" LOC = N8;
+NET "BUTTONS[5]" LOC = U8;
+NET "BUTTONS[6]" LOC = V8;
+NET "BUTTONS[7]" LOC = T5;
+NET "RESET" LOC = B8;
+NET "CLK" LOC = V10;
